embed link changes

--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
 
   <footer>
     <div>
-        <a href="https://www.linkedin.com/in/rikenpatel1" download target="_blank"><i class="fa-brands fa-1.5x fa-linkedin LI-logo"></i></a>
-        <a href="https://github.com/RikenP" download target="_blank"><i class="fa-brands fa-1.5x fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/rikenpatel1" download target="_blank">LinkedIn <i class="fa-brands fa-1.5x fa-linkedin LI-logo"></i></a>
+        <a href="https://github.com/RikenP" download target="_blank">GitHub <i class="fa-brands fa-1.5x fa-github"></i></a>
     </div>
     <p>Copyright 2023 © Riken Patel</p>
   </footer>
