--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </table>
         </section>
 
-        <section class="experience-section" id="Experience">
+        <section class="experience-section" id="experience">
             <h2>Experience</h2>
             <div id="testimonial-carousel" class="carousel slide" data-ride="false" data-interval="false">
                 <div class="carousel-inner">
