--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#experience">Experience</a>
+                            <a class="nav-link" href="#experience_reference">Experience</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#projects">Projects</a>
@@ -134,7 +134,7 @@
             </table>
         </section>
 
-        <section class="experience-section" id="experience">
+        <section class="experience-section" id="experience_reference">
             <h2>Experience</h2>
             <div id="testimonial-carousel" class="carousel slide" data-ride="false" data-interval="false">
                 <div class="carousel-inner">
