--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
                 <tbody>
                 <tr>
                     <th scope="row">University of Illinois at Chicago (UIC)</th>
-                    <td>Master of Science in Electrical & Computer Engineering</td>
+                  <td><em>Master of Science in Electrical & Computer Engineering</em></td>
                     <td>3.7/4.0</td>
                     <td>May 2022</td>
                 </tr>
                 <tr>
                     <th scope="row">University of Illinois at Chicago (UIC)</th>
-                    <td>Bachelor of Science in Biomedical Engineering</td>
+                  <td><em>Bachelor of Science in Biomedical Engineering</em></td>
                     <td>3.5/4.0</td>
                     <td>Dec 2020</td>
                 </tr>
                 <tr>
                     <th scope="row">College of Dupage (COD)</th>
-                    <td>Associate of Science</td>
+                  <td><em>Associate of Science</em></td>
                     <td>3.5/4.0</td>
                     <td>May 2018</td>
                 </tr>
